--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                             class="mainlogo">
                         
                     </div> -->
+                    <div class="col-12 col-md-6 col-lg-12 pb-2 text-center">
+                    <img src="images/icon.png" alt="" width="20%" height="20%"/>
+                </div>
                     <div class="col-12 col-md-6 col-lg-12 text-center">
                     <img src="images/dryy.png" alt="" width="20%" height="20%"/>
                 </div>
