--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
             background-color: white !important;
             color: black !important;
         } 
-        .icons{
-            text-align: center;
-        }
-        .icons>a i{
-            color:white;
-            padding: 1%;
-            font-size: 2rem;
-            margin-right: 10%;
-        }
-        .icons>a i:hover{
-            color: rgb(101, 173, 239);
-            
-        }
+
     </style>
 </head>
 
@@ -63,7 +51,7 @@
                     <a class="nav-link" href="wallcare.html">Wall Care Putty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="manufacturer.html">Manfacturer</a>
+                    <a class="nav-link" href="manufacturer.html">About Us</a>
                 </li>
             </ul>
         </div>
@@ -112,7 +100,7 @@
     </div>
 
 <!--carding-->
-<div class="container card mt-5" style="border: none;">
+<div class="container card mt-5 pt-3" style="border: none;">
     <div class="row">
         <div class="col-12 col-sm-6 col-lg-3">
              <img src="images/joint.jpg" >
@@ -147,19 +135,28 @@
             <div class="image"><span></span></div>
             <div class="image"><span></span></div>
             <div class="image"><span></span></div>
+            <div class="image"><span></span></div>
+            <div class="image"><span></span></div>
+            <div class="image"><span></span></div>
         </div>
     </div>
 </div>
 </div>
 <!--Footer-->
-<div class="container-fluid" style="background-color: black; color: white;">
+ <!-- <div class="container-fluid" style="background-color: black; color: white;">
     <div class="row">
         <div class="col-12 icons">
             <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a target="_blank" href="https://api.whatsapp.com/send?phone=919059418925"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
 </div>
-</div>
+</div>  -->
+<div class="icon-bar">
+    <a href="https://api.whatsapp.com/send?phone=919059418925" target="_blank" class="facebook" data-toggle="modal" data-target="#popupRegistr">WhatsApp</a>
+    
+    </div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
