--- a/jointingmortar.html
+++ b/jointingmortar.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="wallcare.html">Wall Care Putty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="manufacturer.html">Manfacturer</a>
+                    <a class="nav-link" href="manufacturer.html">About Us</a>
                 </li>
             </ul>
         </div>
@@ -126,7 +126,88 @@
             </div>
         </div>
     </div>
-
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-6 mt-5 d-flex1">
+            <table style="font-weight: 400;" class="table" border="1">
+                <tbody>
+                <tr class="sdfsdfd">
+                <th><strong>Parameters</strong></th>
+                <th><strong>Traditional Mortar(Cement &amp; Sand)</strong></th>
+                <th><strong>Fusion Mortar</strong></th>
+                </tr>
+                <tr>
+                <td>Cost Comparison</td>
+                <td>Cement (0.5 kg @ Rs 330 per bag) = Rs. 3.3<br>
+                + Sand (0.045 cft @ Rs 30.5 per cft) = Rs. 1.37<br>
+                Total = Rs. 4.67 per sq. ft.</td>
+                <td>Approx. Rs. 3.60/sq. ft</td>
+                </tr>
+                <tr>
+                <td>Joint thickness</td>
+                <td>10 mm – 15 mm</td>
+                <td>3 to 4 mm</td>
+                </tr>
+                <tr>
+                <td>Plastering possible</td>
+                <td>Minimum 7 days curing required</td>
+                <td>After 24 hours</td>
+                </tr>
+                <tr>
+                <td>Drying time</td>
+                <td>Slow</td>
+                <td>Rapid</td>
+                </tr>
+                <tr>
+                <td>Setting time</td>
+                <td>Slow</td>
+                <td>Rapid</td>
+                </tr>
+                <tr>
+                <td>Height of build</td>
+                <td>Restricted</td>
+                <td>No Restriction</td>
+                </tr>
+                <tr>
+                <td>Precision</td>
+                <td>Less</td>
+                <td>More</td>
+                </tr>
+                <tr>
+                <td>Air tightness</td>
+                <td>Less</td>
+                <td>More</td>
+                </tr>
+                <tr>
+                <td>Strength</td>
+                <td>Joints are weak points</td>
+                <td>Joints are stronger</td>
+                </tr>
+                <tr>
+                <td>Shrinkage</td>
+                <td>More shrinkage cracks</td>
+                <td>No</td>
+                </tr>
+                <tr>
+                <td>Stability</td>
+                <td>Less Stable</td>
+                <td>More Stable</td>
+                </tr>
+                <tr>
+                <td>Material storage</td>
+                <td>More</td>
+                <td>Less</td>
+                </tr>
+                <tr>
+                <td>Aesthetics</td>
+                <td>Uneven, with variations</td>
+                <td>Even and better laying</td>
+                </tr>
+                </tbody>
+                </table>
+        </div>
+    </div>
+</div>
         <div class="row grid-3 mt-4">
             <div class="col-12 col-md-4 col-lg-12">
                 <p><span class="o">O</span>ne of the best choice for all jointing concerns in terms of bonding different
@@ -147,6 +228,10 @@
         </div>
     </div>
 </div>
+<div class="icon-bar">
+    <a href="https://api.whatsapp.com/send?phone=919059418925" target="_blank" class="facebook" data-toggle="modal" data-target="#popupRegistr">WhatsApp</a>
+    
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
