--- a/wallcare.html
+++ b/wallcare.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="wallcare.html">Wall Care Putty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="manufacturer.html">Manfacturer</a>
+                    <a class="nav-link" href="manufacturer.html">About Us</a>
                 </li>
             </ul>
         </div>
@@ -154,7 +154,10 @@
     </div>
 </div>
 </div>
-
+<div class="icon-bar">
+  <a href="https://api.whatsapp.com/send?phone=919059418925" target="_blank" class="facebook" data-toggle="modal" data-target="#popupRegistr">WhatsApp</a>
+  
+  </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
