--- a/jointingmortar.html
+++ b/jointingmortar.html
@@ -134,7 +134,7 @@
                 <tr class="sdfsdfd">
                 <th><strong>Parameters</strong></th>
                 <th><strong>Traditional Mortar(Cement &amp; Sand)</strong></th>
-                <th><strong>Fusion Mortar</strong></th>
+                <th><strong>Lotus Jointing Mortar</strong></th>
                 </tr>
                 <tr>
                 <td>Cost Comparison</td>
