--- a/manufacturer.html
+++ b/manufacturer.html
@@ -99,7 +99,7 @@
                             <p><span><b>Factory</b></span>  :Door no:1-213/1,Mottupalli road,Kadavakuduru,Chinaganjam
                                 Mandal,Prakasam District,Pincode:523181</p>
                            
-                           <p><span><b>Vijayawada Office</b></span> :Flat no:205,Radha cherukuri Pradise,Beside Society Bank,Guntupalli,Sub District:Ibrahimpatanam,Andhrapradesh,521241</p>
+                           <p><span><b>Vijayawada Office</b></span> :Flat no:205,Radha cherukuri Pradise,Beside Society Bank,Guntupalli,Ibrahimpatanam,Andhrapradesh,521241</p>
                            <p><span><b>Chirala Office</b></span> :Dr no:5/142/1,Sivalayam street,Kadavakuduru,District:Prakasam,Andhrapradesh,523181</p>
                             <p><span><b>Contact no</b></span> :9059418925,9059428925</p>
                             <p><span><b>Email</b></span>  :lotussrymix@gmail.com</p>
