--- a/tileadhesive.html
+++ b/tileadhesive.html
@@ -132,7 +132,7 @@
                   </table>
                 </div>
             </div>
-            <div class="container mb-3 mt-5 d-flex justify content-center">
+            <!-- <div class="container mb-3 mt-5 d-flex justify content-center">
               <div class="row grid-3">
 
               <div clas="col-12 col-md-6 col-lg-12">
@@ -322,7 +322,7 @@
                   </tr>
               </tbody>
             </table>
-            </div></div></div>
+            </div></div></div> -->
             <div class="row grid-3 mt-4">
                 <div class="col-12 col-md-4 col-lg-12">
                     <p><span class="o">L</span>OTUS Tile Adhesive material is formulated uniquely to fix tiles. 
