--- a/jointingmortar.html
+++ b/jointingmortar.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar for AAC & fly Ash Bricks</a>
+                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="readywallplaster.html">Ready Wall Plaster</a>
@@ -61,7 +61,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4 col-lg-8 mt-5 jointing">
-                <h3>JOINTING MORTAR FOR ACC & FLY ASH BRICKS</h3>
+                <h3>JOINTING MORTAR</h3>
             </div>
             <div class="col-12 col-md-6 col-lg-6">
                 <img src="images/9.png" alt=""
