--- a/manufacturer.html
+++ b/manufacturer.html
@@ -61,7 +61,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar for AAC & fly Ash Bricks</a>
+                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="readywallplaster.html">Ready Wall Plaster</a>
