--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="nav-link homee" href="#homeSection">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar for AAC & fly Ash Bricks</a>
+                    <a class="nav-link" href="jointingmortar.html">Jointing Mortar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="readywallplaster.html">Ready Wall Plaster</a>
